# voxi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src/: VoxApp.cpp  VoxApp.h  main.cpp  vox.cpp  vox.h
